# neuromapp

./: CMakeLists.txt
neuromapp/: CMakeLists.txt
neuromapp/HHModels/: CMakeLists.txt  adaptiveforwardeuler.cpp  cranknicholson.cpp  forwardeuler.cpp
neuromapp/analytical_solutions/: .constant_cable.cpp.swp  CMakeLists.txt  helper.cpp  helper.h
neuromapp/analytical_solutions/constant_cable/: .module.cpp.swp  CMakeLists.txt  module.cpp
neuromapp/analytical_solutions/drafts/: connector_based_module.cpp  memory_based_module.cpp
neuromapp/cable_section/: CMakeLists.txt  README  module.cpp
neuromapp/coreneuron_1.0/: CMakeLists.txt
neuromapp/coreneuron_1.0/cstep/: main.c
neuromapp/coreneuron_1.0/event_passing/: CMakeLists.txt
neuromapp/coreneuron_1.0/simulator/: simulator.cpp
neuromapp/coreneuron_1.0/solver/: helper.c  helper.h  hines.h  main.c  module.c  solver.h
neuromapp/implicit_validator/: main.cpp
neuromapp/module_example/: CMakeLists.txt  basic_validator.cpp  fixed_pulse.cpp  main.cpp  passive_membrane.cpp
neuromapp/module_example/HH_model/: CMakeLists.txt  HH_leak.cpp  main.cpp  notes.md
neuromapp/module_example/passive_membrane/: basic_validator.cpp  passive_membrane.cpp
neuromapp/sim_builder/: README  cli.cpp  module_manager.cpp  sim_builder.cpp
neuromapp/utils/: CMakeLists.txt  error.h
neuromapp/utils/module/: module.h  module_loader.cpp  module_loader.hpp
neuromapp/utils/plugin/: plugin.h  plugin_loader.cpp  plugin_loader.hpp
neuromapp/utils/storage/: storage.cpp  storage.h
test/coreneuron_1.0/: CMakeLists.txt
test/module/passiveMembrane/: main.cpp  passive_membrane.cpp
